# sample-agent-harness-on-gcp

./: .env.example  .gitignore  ISSUES.md  README.md  pyproject.toml  requirements.txt
.agent/: ACTION.md  DEFINE.md  PLAN.md  project_context.md
.agent/rules/: 00_project_rules.md
.agent/skills/: flume_guide.md  sql_guide.md
.agent/workflows/: 00_memory_management.md
agents/: agent.py  harness.py  ralph_loop.py
ci-cd/: cloudbuild.yaml  package_for_terraform.sh
eval/: run_eval.py
infra/: main.tf  memory_bank_config.py
prompts/: system_instruction.txt
tools/: grounding.py  mcp_client.py  policy_engine.py
